--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
     "@angular/common": "^4.2.6",
     "@angular/compiler": "^4.2.6",
     "@angular/core": "^4.2.6",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "^4.2.6",
     "@angular/http": "^4.2.6",
     "@angular/platform-browser": "^4.2.6",
     "@angular/platform-browser-dynamic": "^4.2.6",
     "@angular/router": "^4.2.6",
-    "angularfire2": "^4.0.0-rc.1",
     "core-js": "^2.4.1",
     "firebase": "^4.1.3",
     "rxjs": "^5.4.2",
