--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,16 +3,19 @@
   "compilerOptions": {
     "baseUrl": "src",
     "declaration": false,
+    "downlevelIteration": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "importHelpers": true,
     "lib": [
       "es2016",
       "dom"
     ],
+    "module": "esnext",
     "moduleResolution": "node",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
-    "target": "es5",
+    "target": "es2015",
     "typeRoots": [
       "node_modules/@types"
     ]
