--- a/package.json
+++ b/package.json
@@ -35,24 +35,25 @@
     "@angular/core": "^8.2.14",
     "@angular/fire": "^6.1.5",
     "@angular/forms": "^8.2.14",
-    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "^8.2.14",
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
     "core-js": "^2.4.1",
     "firebase": "^4.1.3",
     "rxjs": "^6.6.7",
-    "zone.js": "^0.9.1",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.9.1",
     "rxjs-compat": "^6.0.0-rc.0"
   },
   "devDependencies": {
-    "@angular/cli": "6.2.9",
+    "@angular-devkit/build-angular": "~0.803.29",
+    "@angular/cli": "8.3.29",
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "^8.2.14",
     "@types/jasmine": "^2.5.53",
     "@types/jasminewd2": "^2.0.2",
     "@types/node": "^8.0.9",
-    "codelyzer": "^3.1.2",
+    "codelyzer": "^5.0.1",
     "firebase-tools": "^3.9.1",
     "jasmine-core": "^2.6.4",
     "jasmine-spec-reporter": "^4.1.1",
