--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "downlevelIteration": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "skipLibCheck": true,
     "importHelpers": true,
     "lib": [
       "es2016",
