--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "core-js": "^2.4.1",
     "firebase": "^4.1.3",
     "rxjs": "^6.6.7",
+    "rxjs-compat": "^6.0.0-rc.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "rxjs-compat": "^6.0.0-rc.0"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.15",
