--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "module": "esnext",
     "moduleResolution": "node",
     "outDir": "./dist/out-tsc",
+    "noImplicitUseStrict": true,
     "sourceMap": true,
     "target": "es2015",
     "typeRoots": [
